# Coral-Reef-Classification-Robot

./: README.md  snapshot.txt
coral_reef_sim/worlds/: coral_reef.world
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/remus100_sim/lib/remus100_sim/: robot_gui.py
install/remus100_sim/share/remus100_sim/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/submarine_control/share/submarine_control/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/talker_listener/share/talker_listener/: package.sh  package.xml
log/: latest_build
src/remus100_sim/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/remus100_sim/launch/: auv_robot.launch.py  launch_sim.launch.py  launch_sim.py
src/remus100_sim/log/: latest_build
src/remus100_sim/models/: CMakeLists.txt  coral_reef_small.sdf  package.xml  remus100.dae
src/remus100_sim/models/coral_reef_small/: coral_reef_small.sdf  model.config
src/remus100_sim/models/scripts/: coral_reef_navigator.py
src/remus100_sim/models/simple_robot/: model.config  model.sdf
src/remus100_sim/scripts/: get_reef_position.py  robot_gui.py  teleop_control.py  teleport_robot.py
src/remus100_sim/worlds/: coral_reef.world
src/submarine_control/: package.xml  setup.cfg  setup.py
src/submarine_control/submarine_control/: setup.py  teleop_control.py
talker_listener/: package.xml  setup.py
(+9 files in other folders)
