<?xml version="1.0"?>
<package format="3">
  <name>remus100_sim</name>
  <version>0.0.1</version>
  <description>Simulation package for autonomous underwater robot</description>
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>gazebo_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
